# Chord-Companion

./: Cargo.toml
src/: chord.rs  lib.rs  note.rs  test.rs
