[package]
name = "chord_companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

derive_builder = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
postcard = "1.0.6"
heapless = "0.7.16"
